--- a/tugas2.html
+++ b/tugas2.html
@@ -7,61 +7,82 @@
         <h1><p align="center"><b>5 Buku Kumpulan Puisi Joko Pinurbo Yang Wajib Dibaca!</b></p></h1>
         <p align="center"><b><i>Mari kita beribadah puisi</i></b></p>
     </div>
+    <nav><p align="center">
+        <a href="#">Home </a> |
+        <a href="#">About</a> |
+        <a href="https://instagram.com/wulannrfrl_">Contact</a></p>
+      </nav>
         <p align="center"><img src="images/jokpin.jpg" width="500" height="400"></p><br>
         <p align="justify">Buat kamu penikmat puisi tentu tidak asing dengan salah satu penyair hebat Indonesia yaitu Joko Pinurbo atau yang akrab dipanggil Jokpin. Beliau lahir di Sukabumi dan menetap di Yogyakarta. Joko Pinurbo adalah salah seorang penyair yang karyanya mampu menjangkau khalayak pembaca yang luas. Menunaikan ibadah puisi sejak di SMA,penyair kelahiran 11 mei 1962 ini telah menerbitkan belasan buku puisi. Berbagai penghargaan telah beliau terima di antaranya Hadiah Sastra Lontar (2001), Tokoh Sastra Pilihan Tempo (2001, 2012), Penghargaan Sastra Badan Bahasa (2002, 2014), The S.E.A Award atau Penhargaan Sastra Asia Tenggara (2014), dan masih banyak lagi. </p>
         <p>Berikut saya rangkum 5 rekomendasi buku kumpulan puisi beliau yang wajib kamu baca. Adakah yang sudah kamu baca?</p>
         <h1><b>1. Celana</b></h1>
         <img src="images/celana.jpg" width="200" height="300">
-        <p></p><i><b>Ia telah mencoba seratus model celana</b></i></p>
-        <p><i><b>di berbagai toko busana</b></i></p>
-        <p><i><b>namun tak menemukan satu pun</b></i></p>
-        <p><i><b>yang cocok untuknya.</b></i></p>
+        <p></p><i><b>| Ia telah mencoba seratus model celana</b></i></p>
+        <p><i><b>| di berbagai toko busana</b></i></p>
+        <p><i><b>| namun tak menemukan satu pun</b></i></p>
+        <p><i><b>| yang cocok untuknya.</b></i></p>
         <br>
         <p align="justify">Buku "Celana" adalah kumpulan puisi yang memadukan kejelasan makna dengan kesederhanaan kata-kata. Dikenal dengan gaya menulis yang khas, humoris, dan nyeleneh, Joko Pinurbo memilih kata-kata yang segar dan tak terduga dalam bukunya ini. Dengan mengambil tema-tema seperti celana, ranjang, kuburan, wanita, boneka, dan pembunuhan, ia mengemasnya dalam nuansa yang ringan dan lucu. </p>
         <p align="justify">Buku ini berisi 44 puisi dan diakhiri dengan kata-kata dari Sapardi Djoko Damono. Meski ditulis dengan sentuhan humor, puisi-puisinya menggali tema-tema serius seperti perjuangan, demonstrasi, hilangnya sejumlah aktivis, dan tantangan dalam mengungkapkan pendapat di era tersebut. Meskipun disajikan dengan pendekatan humor, setiap karyanya menawarkan kedalaman makna yang signifikan, memberikan nuansa berbeda dari karya-karya puisi lainnya.</p>
+        <br>
         <h1><b>2. Perjamuan Khong Guan</b></h1>
         <img src="images/KG.jpg" width="200" height="300">
-        <p><i><b>Tuhan, ponsel saya</b></i></p>
-        <p><i><b>rusak dibanting gempa.</b></i></p>
-        <p><i><b>Nomor kontak saya hilang semua.</b></i></p>
-        <p><i><b>Satu-satunya yang tersisa</b></i></p>
-        <p><i><b>ialah nomorMu</b></i></p>
+        <p><i><b>| Tuhan, ponsel saya</b></i></p>
+        <p><i><b>| rusak dibanting gempa.</b></i></p>
+        <p><i><b>| Nomor kontak saya hilang semua.</b></i></p>
+        <p><i><b>| Satu-satunya yang tersisa</b></i></p>
+        <p><i><b>| ialah nomorMu</b></i></p>
         <br>
-        <p><i><b>Tuhan berkata:</b></i></p>
-        <p><i><b>Dan itulah satu-satunya nomor</b></i></p>
-        <p><i><b>yang tak pernah kausapa.</b></i></p>
+        <p><i><b>| Tuhan berkata:</b></i></p>
+        <p><i><b>| Dan itulah satu-satunya nomor</b></i></p>
+        <p><i><b>| yang tak pernah kausapa.</b></i></p>
         <br>
         <p align="justify">Buku yang diterbitkan oleh Gramedia Pustaka Utama pada tahun 2020 ini menampilkan 80 karya puisi yang dikelompokkan ke dalam empat kaleng. Perjamuan Khong Guan, pada setiap kaleng menggali tema yang beragam, mencakup tradisi, budaya, kejadian penting, aspirasi, dan isu-isu sosial.  </p>
         <p align="justify">Buku ini juga menghadirkan beberapa puisi yang fokus pada ikonik kaleng Khong Guan, serta menjawab pertanyaan populer mengenai keberadaan figur ayah dalam gambar kaleng tersebut. Jokpin memberikan interpretasi kreatif dan unik tentang kisah keluarga di balik gambar kaleng Khong Guan.</p>
+        <br>
         <h1><b>3. Sepotong Hati Di Angkringan</b></h1>
         <img src="images/sepotong.jpg" width="200" height="300">
-        <p><i><b>Pada suatu malam yang nyamnyam, kau menemukan sepotong hati yang lezat </b></i></p>
-        <p><i><b>dalam sebungkus nasi kucing. Kau mengira itu hati ibumu atau hati kekasihmu. </b></i></p>
-        <p><i><b>Namun, bisa saja itu hati orang yang pernah kausakiti atau menyakitimu.</b></i></p>
-        <p><i><b>Angkringan adalah nama sebuah sunyi, tempat kau melerai hati, lebih-lebih saat </b></i></p>
-        <p><i><b>hatimu disakiti sepi.</b></i></p>
+        <p><i><b>| Pada suatu malam yang nyamnyam, kau menemukan sepotong hati yang lezat </b></i></p>
+        <p><i><b>| dalam sebungkus nasi kucing. Kau mengira itu hati ibumu atau hati kekasihmu. </b></i></p>
+        <p><i><b>| Namun, bisa saja itu hati orang yang pernah kausakiti atau menyakitimu.</b></i></p>
+        <p><i><b>| Angkringan adalah nama sebuah sunyi, tempat kau melerai hati, lebih-lebih saat </b></i></p>
+        <p><i><b>| hatimu disakiti sepi.</b></i></p>
         <br>
         <p align="justify">"Sepotong Hati di Angkringan" diterbitkan oleh DIVA Press pada tahun 2021, dengan total 80 halaman yang menghadirkan 45 karya puisi, yang dibagi menjadi dua segmen. Dalam segmen pertama, yang berjudul sama dengan judul buku, Jokpin membawa pembaca ke dalam pesona Yogyakarta, melalui puisi-puisi yang mencerminkan suasana kota, orang-orangnya, kesepian, serta rasa rindu yang mendalam.  </p>
         <p align="justify">Sementara pada bagian kedua yang bertajuk 'Ibadah Mandi', Jokpin menyajikan refleksi mendalam mengenai pandemi corona. Melalui karyanya, Jokpin dengan mahir mengubah kenyataan sehari-hari menjadi sajak yang simpel namun penuh makna.</p>
+        <br>
         <h1><b>4. Salah Piknik</b></h1>
         <img src="images/Salah.jpg" width="200" height="300">
-        <p><i><b>Ini malam korona. Malam ketika pandemi membuat segalanya berubah dan berbeda. </b></i></p>
-        <p><i><b>Malam ketika dunia limbung dan tak tahu lagi bagaimana membahagiakan manusia.  </b></i></p>
-        <p><i><b>Malam ketika sepi mengitari tubuhmu menebarkan wabah cinta. </b></i></p>
+        <p><i><b>| Ini malam korona. Malam ketika pandemi membuat segalanya berubah dan berbeda. </b></i></p>
+        <p><i><b>| Malam ketika dunia limbung dan tak tahu lagi bagaimana membahagiakan manusia.  </b></i></p>
+        <p><i><b>| Malam ketika sepi mengitari tubuhmu menebarkan wabah cinta. </b></i></p>
         <br>
         <p align="justify">Salah Piknik adalah kumpulan karya puisi karya Joko Pinurbo yang terinspirasi oleh fenomena global selama pandemi corona. Melalui kata-katanya dalam 80 karya puisi, ia memadukan humor dengan nada kesedihan. Buku ini juga mengandung sindiran dan kritik terhadap berbagai hal selama masa pandemi. Dengan ilustrasi dari Alit Ambara, "Salah Piknik" bukan hanya sekedar kumpulan puisi, tetapi juga sebuah dokumen sosial yang mencatat perubahan-perubahan signifikan yang terjadi selama periode tersebut. </p>
+        <br>
         <h1><b>5. Kabar Sukacinta</b></h1>
         <img src="images/kabar.png" width="200" height="300">
-        <p><i><b>Di antara kolang-kaling  </b></i></p>
-        <p><i><b>yang terhidang manis </b></i></p>
-        <p><i><b>dalam gelas bening itu, </b></i></p>
-        <p><i><b>terselip biji matamu: </b></i></p>
-        <p><i><b>berkedip-kedip memandangku   </b></i></p>
-        <p><i><b>seperti hendak berkata,  </b></i></p>
-        <p><i><b>"Telah kutunaikan </b></i></p>
-        <p><i><b>tugasku membaca rahasia-rahasia yang tak terjangkau akal </b></i></p>
-        <p><i><b>dan tak tertembus ilmu."</b></i></p>
+        <p><i><b>| Di antara kolang-kaling  </b></i></p>
+        <p><i><b>| yang terhidang manis </b></i></p>
+        <p><i><b>| dalam gelas bening itu, </b></i></p>
+        <p><i><b>| terselip biji matamu: </b></i></p>
+        <p><i><b>| berkedip-kedip memandangku   </b></i></p>
+        <p><i><b>| seperti hendak berkata,  </b></i></p>
+        <p><i><b>| "Telah kutunaikan </b></i></p>
+        <p><i><b>| tugasku membaca rahasia-rahasia yang tak terjangkau akal </b></i></p>
+        <p><i><b>| dan tak tertembus ilmu."</b></i></p>
         <br>
         <p align="justify">Kabar Sukacinta adalah kumpulan puisi yang memberikan gambaran satir tentang kehidupan sosial dan keragaman budaya di Indonesia. Dalam 50 judul puisi dalam buku ini, meskipun menggunakan bahasa yang simpel, puisi-puisi di dalamnya menyajikan makna yang cerdas dan mendalam. Terkadang puisi-puisinya membawa nuansa kesedihan, humor, atau bahkan kekaguman. Namun, keseluruhannya menawarkan pemikiran mendalam tentang kehidupan, beralih dari kesan awal ke renungan yang lebih mendalam. </p>
+   <br>
+<br>
+        <hr>
+<br>
+        <footer>
+            <b>Nama : Wulan Nur Aprilia </b><br>
+            <b>NIM  : 11210251000051</b><br>
+            <b>Kelas: 5A</b>
+          </footer>
+
+        <br>
+        <br>
     </body>
 </html>
